# p6-swarm

./: .gitignore  README.md  frames.gv  requirements.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/basic_mobile_robot/share/ament_index/resource_index/parent_prefix_path/: basic_mobile_robot
install/basic_mobile_robot/share/basic_mobile_robot/: local_setup.sh  package.sh  package.xml
install/basic_mobile_robot/share/basic_mobile_robot/environment/: ament_prefix_path.sh  path.sh
install/basic_mobile_robot/share/basic_mobile_robot/launch/: basic_mobile_bot_v1.launch.py
log/: latest_build
src/basic_mobile_robot/: CMakeLists.txt
src/basic_mobile_robot/models/: base.urdf  omni_featter.urdf
src/basic_mobile_robot/models/basic_macros/: inertial_macros.urdf
src/basic_mobile_robot/models/wheels_urdf/: mecanum_wheels_macro.urdf
src/linorobot/linorobot2_base/config/: ekf.yaml
src/linorobot/linorobot2_bringup/launch/: bringup.launch.py
src/linorobot/linorobot2_description/urdf/controllers/: omni_drive.urdf.xacro
src/linorobot/linorobot2_gazebo/worlds/: playground.world
src/linorobot/linorobot2_navigation/config/: navigation.yaml
src/omni_featter/omni_featter_description/: CMakeLists.txt  package.xml
src/omni_featter/omni_featter_description/launch/: omni_featter_description.launch.py
src/omni_featter/omni_featter_description/rviz/: urdf_config.rviz
src/omni_featter/omni_featter_description/urdf/: base.urdf.xacro  omni_featter.urdf.xacro
src/omni_featter/omni_featter_description/urdf/basic_macros/: inertial_macros.urdf.xacro
src/omni_featter/omni_featter_description/urdf/controllers/: omni_drive_controller.urdf.xacro
src/omni_featter/omni_featter_description/urdf/sensors/: imu_.urdf.xacro
src/omni_featter/omni_featter_description/urdf/wheels_urdf/: mecanum_wheels_macro.urdf.xacro
src/omni_featter/omni_featter_gazebo/: CMakeLists.txt  package.xml
src/omni_featter/omni_featter_gazebo/launch/: omni_featter_gazebo.launch.py
src/swarm_process_robot/docking_action_server/: CMakeLists.txt  package.xml
src/swarm_process_robot/docking_action_server/commander/: action_server_docking.py
src/swarm_process_robot/docking_action_server/launch/: action_server_docking.launch.py
src/swarm_process_robot/linorobot2_description/: package.xml
src/swarm_process_robot/process_robot_base/: CMakeLists.txt  package.xml
src/swarm_process_robot/process_robot_base/config/: ekf.yaml  ekf_real_robot.yaml
src/swarm_process_robot/process_robot_bringup/: CMakeLists.txt  package.xml
src/swarm_process_robot/process_robot_bringup/launch/: bringup.launch.py
src/swarm_process_robot/process_robot_commander/: CMakeLists.txt  package.xml
src/swarm_process_robot/process_robot_commander/action/: Docking.action  Feeder.action
src/swarm_process_robot/process_robot_commander/commander/: robot_commander.py
src/swarm_process_robot/process_robot_commander/launch/: robot_commander.launch.py
src/swarm_process_robot/process_robot_description/: CMakeLists.txt  package.xml
src/swarm_process_robot/process_robot_description/launch/: description.launch.py  description_real_robot.launch.py
src/swarm_process_robot/process_robot_description/rviz/: description.rviz
src/swarm_process_robot/process_robot_description/urdf/: process_robot.urdf.xacro  process_robot_properties.urdf.xacro
src/swarm_process_robot/process_robot_description/urdf/controllers/: omni_drive.urdf.xacro
src/swarm_process_robot/process_robot_description/urdf/sensors/: imu.urdf.xacro  lidar.urdf.xacro  tri_ir_sensor.urdf.xacro  web_cam.urdf.xacro
src/swarm_process_robot/process_robot_description/urdf/sensors/tri_ir_sensor/: tri_ir_sensor_left.urdf.xacro  tri_ir_sensor_middle.urdf.xacro  (+1 more)
src/swarm_process_robot/process_robot_gazebo/: CMakeLists.txt  package.xml
src/swarm_process_robot/process_robot_gazebo/launch/: gazebo.launch.py
src/swarm_process_robot/process_robot_gazebo/scripts/: robot_commander.py
src/swarm_process_robot/process_robot_navigation/: CMakeLists.txt  package.xml
src/swarm_process_robot/process_robot_navigation/config/: bt_config.xml  mapping_navigation_real_robot.yaml  navigation_gazebo.yaml  navigation_gazebo_lidar.yaml  navigation_real_robot copy.yaml  navigation_real_robot.yaml  slam.yaml  slam_localization.yaml  slam_localization_real_robot copy.yaml  slam_localization_real_robot.yaml
src/swarm_process_robot/process_robot_navigation/launch/: SLAM_gazebo.launch.py  SLAM_navigation_real_robot.launch.py  SLAM_real_robot.launch.py  mapping_real_robot.launch.py  navigation_gazebo.launch.py  navigation_real_robot.launch.py  robot_commander.launch.py
src/swarm_process_robot/process_robot_navigation/maps/: empty_map.pgm  swarm_group_room_map.yaml  swarm_group_room_map_poor_res.pgm  swarm_group_room_map_rotated.pgm  swarm_map1.pgm  swarm_map1.yaml
src/swarm_process_robot/process_robot_navigation/scripts/: robot_commander.py
