<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>process_robot_base</name>
  <version>0.0.0</version>
  <description>Process robot Base Package</description>
  <maintainer email="kasperfg16@outlook.dk">Kasper Fuglsang Grøntved</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
