<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>process_robot_bringup</name>
  <version>0.0.0</version>
  <description>Process robot bringup Bringup Files</description>
  <maintainer email="kasperfg16@outlook.dk">Kasper Fuglsang Grøntved</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>joy_linux</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>micro_ros_agent</exec_depend>
  <exec_depend>depthimage_to_laserscan</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
