<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>process_robot_gazebo</name>
    <version>0.0.0</version>
    <description>process robot Gazebo Package</description>
    <maintainer email="kasperfg16@outlook.dk">Kasper Fuglsang Grøntved</maintainer>
    <license>Apache 2.0</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>
    <exec_depend>gazebo_ros_pkgs</exec_depend>
    <exec_depend>nav2_simple_commander</exec_depend>
    <exec_depend>robot_localization</exec_depend>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>